Adding CVS tags.

--- a/data_taxonomy/theme/data_taxonomy.css
+++ b/data_taxonomy/theme/data_taxonomy.css
@@ -1,3 +1,5 @@
+/* $Id$ */
+
 /**
  * Hide & show tags/forms.
  */
@@ -8,11 +10,13 @@
 /**
  * Basic styling / aesthetics.
  */
-.data-taxonomy-tags {
-  margin:10px 0px;
-  }
+.data-taxonomy-edited a { opacity:.5; }
+
+.data-taxonomy-tags { margin:10px 0px; }
 
 .data-taxonomy-tags a {
+  -moz-border-radius:3px;
+  -webkit-border-radius:3px;
   margin:0px 5px 0px 0px;
   padding:3px 5px;
   }
